--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ code {
 
 /* header styling start */
 
-li, a {
+li,
+a {
   font-weight: 500;
   font-size: 16px;
   color: var(--secondary);
@@ -40,12 +41,12 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  border-bottom: .25rem black solid;
+  border-bottom: 0.25rem black solid;
 }
 header h1 {
   color: var(--secondary);
   font-size: 2.5rem;
-  padding: .25rem;
+  padding: 0.25rem;
   text-shadow: 1.5px 1px var(--text-shadow);
 }
 
@@ -66,7 +67,7 @@ header h1 {
 }
 .nav-link-active {
   color: var(--primary);
-  text-shadow: 1px .5px var(--secondary);
+  text-shadow: 1px 0.5px var(--secondary);
 }
 
 /* header styling end */
@@ -81,7 +82,6 @@ header h1 {
 .about-container {
   position: relative;
   margin: 3rem;
-
 }
 .about-title {
   position: absolute;
@@ -95,6 +95,51 @@ header h1 {
   margin: 1rem;
   color: var(--secondary);
   text-shadow: 1.5px 1px var(--text-shadow);
+}
+
+/* contact page styling start */
+
+.container {
+  width: 50%;
+  max-width: 1200px;
+  margin: 2rem auto;
+}
+input {
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0.25rem;
+  border: 1px solid var(--secondary);
+  outline: none;
+  border-radius: 1rem;
+  transition: box-shadow 0.2s;
+}
+
+input:focus {
+  border: 1px solid var(--secondary);
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
+}
+textarea {
+	width: 400px;
+	height: 120px;
+	border: 2px solid var(--secondary);
+  border-radius: 1rem;
+	padding: 5px;
+  font-size: 1rem;
+  font-weight: 500;
 
 }
+
+.button {
+  background-color: rgb(83, 200, 239);
+  border-radius: .5rem;
+  box-shadow: 1px .5px var(--text-shadow);
+}
+.container h1 {
+  font-weight: 500;
+  font-size: 2rem;
+  color: var(--secondary);
+  text-shadow: 1.5px 1px var(--text-shadow);
+
+}
+
 
