--- a/src/index.css
+++ b/src/index.css
@@ -90,11 +90,16 @@ header h1 {
 /* header styling end */
 
 /* About Me page styling */
+.pic-animation {
+  flex: 1;
+}
 
 .profile-pic {
   border-radius: 50%;
-  margin: 3.5rem 1rem 0 1rem;
+  margin: 4rem 1rem 0 1rem;
   padding: 1rem;
+  transform: translatey(0px);
+  animation: float 6s ease-in-out infinite;
 }
 .about-container {
   position: relative;
@@ -102,18 +107,47 @@ header h1 {
   background-image: linear-gradient(var(--secondary), rgb(47, 47, 244));
   padding: 1rem 0;
 }
+.about-animation {
+  width: 500px;
+  margin-top: 3rem;
+}
 .about-title {
   position: absolute;
   right: 50%;
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: var(--text-color);
   text-shadow: 1.5px 1px var(--text-shadow);
 }
 .about-text {
   margin: 1rem 1rem 0 1rem;
+  padding: .5rem;
   color: var(--secondary);
   text-shadow: 1.5px 1px var(--text-shadow);
+  border: 2px solid lightgrey;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+}
+.animation-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center;
+  max-width: 90vw;
+}
+@keyframes float {
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-20px);
+  }
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
 }
 
 /* contact page styling start */
@@ -121,7 +155,7 @@ header h1 {
 .container {
   width: 100vw;
   max-width: 1200px;
-  padding: 0.5rem;
+  padding: 1.5rem;
   text-align: center;
   height: 100%;
   background-color: var(--secondary);
@@ -134,6 +168,7 @@ input {
   outline: none;
   border-radius: 1rem;
   transition: box-shadow 0.2s;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
 
 input:focus {
@@ -150,6 +185,8 @@ textarea {
   font-weight: 500;
   max-width: 100vw;
   margin: 0 1rem 0 0;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
 }
 
 .button {
@@ -225,7 +262,6 @@ textarea {
 
 /* portfolio styling */
 
-
 .container h1 {
   font-weight: 500;
   font-size: 3rem;
@@ -236,7 +272,7 @@ textarea {
 .grid-container {
   display: inline-grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    background-color: rgb(77, 131, 225);
+  background-color: rgb(77, 131, 225);
   padding: 10px;
   box-shadow: 0 0 10px black;
 }
@@ -244,12 +280,33 @@ textarea {
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
+  padding: 0px;
   font-size: 30px;
   text-align: center;
 }
 .grid-item h3 {
   font-size: 3rem;
   text-decoration: underline;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+}
+
+@media (max-width: 750px) {
+  .animation-box {
+    display: block;
+    justify-content: space-between;
+    text-align: center;
+  }
+  
+}
+@media (max-width: 487px) {
+  .about-text {
+    max-width: 60%;
+  }
+  /* .grid-container {
+    max-width: 100%;
+  } */
+  .grid-item {
+    max-width: 80%;
+  }
+
 }
